<resources>
    <string name="app_name">SMSGateway</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="b1_title">list Active Workers</string>
    <string name="b2_title">Start Worker</string>
    <string name="b3_title">Stop Worker</string>

    <string name="pref_numsms">pref_numsms</string>
    <string name="pref_date_last_sms" />
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="api_key_title">API Key</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Server preferences-->
    <string name="apikey">api_key</string>
    <string name="host">host</string>
    <string name="port">port</string>
    <string name="usessl">use_ssl</string>
    <string name="interval_minutes">interval_minutes</string>
    <string name="title_activity_log">LogActivity</string>

</resources>