<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="Authorization">

        <EditTextPreference
            app:key="@string/apikey"
            app:title="API Key"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="922BEE5623AFD"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Server">

        <EditTextPreference
            app:key="@string/host"
            app:title="Host"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="54.37.64.27"
            />

        <EditTextPreference
            app:key="@string/port"
            app:title="Port"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="8090"
            />

        <SwitchPreferenceCompat
            app:key="@string/usessl"
            app:summaryOff="Call server using http://"
            app:summaryOn="Call server using https://"
            app:title="Enable SSL"
            android:defaultValue="true"
            />


    </PreferenceCategory>

    <PreferenceCategory app:title="Scheduler">

        <EditTextPreference
            app:key="@string/interval_minutes"
            app:title="Polling interval (minutes)"
            android:inputType="number"
            app:useSimpleSummaryProvider="true"
            android:defaultValue="30"
            />

    </PreferenceCategory>


</PreferenceScreen>